--- a/v0.1/style.css
+++ b/v0.1/style.css
@@ -1,49 +1,77 @@
 /* Header */
-header{
-    height: 30vh;
+.jumbotron{
+    padding: 1vh;
+    margin: 0;
+    background-color: #fffcf2;
 }
+header{
+    height: 13vh;
+}
+/* Logo */
 .jumbotron img{
-    width: 90%;
+    width: 50%;
     margin: 0;
     padding: 0;
 }
-.jumbotron .col-md-8 {
+.jumbotron div:first-child{
     text-align: center;
 }
-header h1{
+/* Page Title */
+.jumbotron .col-md-7 {
+    text-align: center;
+}
+.jumbotron h1{
     margin: 0;
     display: inline-block;
     font-family: Times New Roman, serif;
     font-weight: bold;
 }
+/* Header Links */
+    .jumbotron div.col-md-1 a{
+        margin-top: 5%;
+    }
 /* Reset Button */
 #btn-reset{
     color: #ffffff;
     background-color: #cf171f;
-    margin-top: 5%;
+    margin-top: 6%;
 }
-
+/* end Header */
+/* Game Body */
+.row{
+    background-image: url("../images/heather/book-bg.png");
+}
+/* Game Stats */
+#game-stats.panel, #game-stats div.panel-heading{
+    background-color: #2759af;
+    border: none;
+    color: #ffffff;
+    width: 15vw;
+}
+#game-stats{
+    margin: 15% 0;
+}
 /* Card Field */
 #game-area{
+    margin-top: 1vh;
     font-size: 0px;
-}
-.col-md-9{
     border: none;
+    background-color: transparent;
 }
 /* Cards */
 #game-area .card{
-    height:200px;
-    width:125px;
+    height: 170px;
+    width: 110px;
     border: 1px solid #000;
-    display:inline-block;
-    margin: 1% 2%;
+    display: inline-block;
+    margin: 0.5vh 2%;
     position: relative;
     cursor: pointer;
 }
 .card .back, .card .front,
 .card .back img, .card .front img {
-    height:100%;
-    width:100%;
+    height: 100%;
+    width: 100%;
     position: absolute;
 }
 /* Setting up card display */
