--- a/v0.1/style.css
+++ b/v0.1/style.css
@@ -39,16 +39,18 @@ header{
     font-family: Times New Roman, serif;
 }
 /* Game Stats */
+#game-stats{
+    width: 17vw;
+    height: 80vh;
+    margin: 15% 0;
+}
 #game-stats.panel, #game-stats div.panel-heading{
-    background-color: #2759af;
-    border: none;
+    /*background-color: #2759af;
+    border: none;*/
     color: #ffffff;
     width: 17vw;
 }
-#game-stats{
-    margin: 15% 0;
-    height: 40%;
-}
+
 /* Reset Button */
 #btn-reset{
     color: #ffffff;
