Memory Match v1 - Heather Hernandez

--- a/v0.1/style.css
+++ b/v0.1/style.css
@@ -60,7 +60,7 @@ header{
 /* Card Field */
 #game-area{
     margin-top: 1vh;
-    font-size: 0px;
+    font-size: 0;
     border: none;
     background-color: transparent;
 }
