--- a/v0.1/style.css
+++ b/v0.1/style.css
@@ -1,3 +1,9 @@
+/* Body */
+body{
+    width: 100vw;
+    height: 100vh;
+}
+
 /* Header */
 .jumbotron{
     padding: 1vh;
@@ -28,35 +34,48 @@ header{
     font-weight: bold;
 }
 /* Header Links */
-    .jumbotron div.col-md-2 a{
-        margin-top: 5%;
+    .jumbotron div>a{
+        margin-top: 50%;
     }
 /* end Header */
+
 /* Game Body */
 .row{
     height: 90vh;
     background-image: url("../images/heather/book-bg.png");
     font-family: Times New Roman, serif;
 }
+
 /* Game Stats */
 #game-stats{
-    width: 17vw;
-    height: 100%;
+    width: 18vw;
+    height: 20vw;
     margin: 15% 0;
+    background-color: transparent;
 }
-#game-stats.panel, #game-stats div.panel-heading{
-    background-color: #2759af;
-    border: none;
-    color: #ffffff;
-    width: 17vw;
+#stats-book{
+    width: 18vw;
+    height: 20vw;
+    z-index: -1;
 }
-
+#game-stats div.panel-heading, #game-stats div.panel-body{
+    position: relative;
+    left: 32%;
+    bottom: 100%;
+}
+/* Stats Headers */
+.games-played, .attempts, .accuracy {
+    background-color: transparent;
+    color: inherit;
+}
 /* Reset Button */
 #btn-reset{
     color: #ffffff;
     background-color: #cf171f;
     margin-top: 6%;
 }
+/* end Stats */
+
 /* Card Field */
 #game-area{
     margin-top: 1vh;
