memory match v0.5.1 - moved images

--- a/style.css
+++ b/style.css
@@ -103,6 +103,12 @@ header{
 .card_flipped{
     visibility: hidden;
 }
+
+/* Ladder Movement*/
+#ladder{
+    height: 40vw;
+}
+
 /* Winner screen */
 .win {
     font-size: 5vw;
