Memory Match v1.0 - Heather Hernandez

--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ header{
 #game-area .card{
     height: 12vw;
     width: 8vw;
-    border: 1px solid #000;
+    border: 0.1vw solid #000000;
     display: inline-block;
     margin: 0.5vh 2%;
     position: relative;
