--- a/style/clues.css
+++ b/style/clues.css
@@ -1,76 +1,3 @@
-body{
-    overflow: hidden;
-    height: 100vh;
-}
-
-/* Navigation Bar */
-.navigation{
-    margin: 0 -15px;
-    box-sizing: content-box;
-}
-.navigation>div:first-child{
-    padding: 2%;
-    padding-bottom: 0;
-}
-.navigation > div > div{
-    display: inline-block;
-}
-#caseStats{
-    width: 33%;
-    color: #ffffff;
-    font-size: 1.2em;
-    font-weight: bold;
-}
-#title{
-    width: 33%;
-    text-align: center;
-    font-size: 0.25em;
-}
-.letterSquare{
-    font-size: 2.5rem;
-    display: inline-block;
-    width: 1.25em;
-    background: #ffffff;
-    border: 1px solid #000000;
-}
-#caseFiles{
-    width: 100%;
-    margin-top: 1%;
-}
-#caseFiles .subtitle{
-    font-size: 1.2em;
-    color: #ffffff;
-    margin-left: 2%;
-    margin-right:1%;
-}
-.file{
-    width: 14.75%;
-    padding: 0.75em 5px;
-    margin-right: -4px;
-    font-size: 0.74em;
-    font-family: "Courier New", "courier", monospace;
-    white-space: nowrap;
-    text-align: center;
-    background: #ead295;
-    border-right: 1px solid rgba(96, 64, 32, 0.2);
-    border-radius: 5px 5px 0 0;
-    box-shadow: 6px 0 25px -10px #604020 inset;
-}
-
-.subtitle{
-    text-align: center;
-}
-
-/* Game Area */
-.background{
-    background: url("images/sherlock.png") #ead295 no-repeat;
-    background-size: 100%;
-    background-position: left;
-    height: 85.5%;
-}
-.background>div{
-    display: inline-block;
-}
 /* Clue Area */
 #clueArea{
     width: 20%;
@@ -85,11 +12,15 @@ body{
 .clue{
     width: 60px;
     height: 60px;
-    /*border: 1px solid;*/
+    /*border: 2px solid;*/
     border-radius: 100%;
     position: absolute;
     text-align: center;
     overflow: hidden;
+}
+.clue.ninePlus{
+    width: 50px;
+    height: 50px;
 }
 .clueImage{
     width: 100%;
@@ -97,6 +28,71 @@ body{
 }
 
 /* Clue Positions */
+
+/* Out of 11 (18 card game) */
+/* Left Clues */
+#c1of11{
+    left: 10%;
+    background: red;
+}
+#c4of11{
+    left: 10%;
+    top: 30%;
+    background: blue;
+}
+#c7of11{
+    left: 10%;
+    top: 50%;
+    background: whitesmoke;
+}
+#c10of11{
+    left: 10%;
+    top: 70%;
+    background: indigo;
+}
+
+/* Middle Clues */
+#c3of11{
+    left: 50%;
+    transform: translateX(-50%);
+    top: 20%;
+    background: green;
+}
+#c6of11{
+    left: 50%;
+    transform: translateX(-50%);
+    top: 40%;
+    background: brown;
+}
+#c9of11{
+    left: 50%;
+    transform: translateX(-50%);
+    top: 60%;
+    background: yellow;
+}
+
+/* Right Clues */
+#c2of11{
+    right: 10%;
+    background: orange;
+}
+#c5of11{
+    right: 10%;
+    top: 30%;
+    background: purple;
+}
+#c8of11{
+    right: 10%;
+    top: 50%;
+    background: black;
+}
+#c11of11{
+    right: 10%;
+    top: 70%;
+    background: indianred;
+}
+
+
 /* Out of 9 (18 card game) */
 #c1of9{
     left: 10%;
@@ -143,72 +139,65 @@ body{
     top: 66%;
     background: black;
 }
+
 /* Out of 7 (14 card game) */
+/* Odd Clues */
 #c1of7{
     left: 10%;
 }
 #c3of7{
     left: 10%;
     top: 30%;
-    background: green;
 }
 #c5of7{
     left: 10%;
     top: 50%;
-    background: purple;
 }
 #c7of7{
     left: 10%;
     top: 70%;
-    background: whitesmoke;
 }
-
 /* Even Clues */
 #c2of7{
     right: 10%;
     top: 20%;
-    background: orange;
 }
 #c4of7{
     right: 10%;
     top: 40%;
-    background: blue;
 }
 #c6of7{
     right: 10%;
     top: 60%;
-    background: brown;
 }
 
 /* Out of 5(10 card game) */
+/* Odd Clues */
 #c1of5{
     left: 10%;
 }
 #c3of5{
     left: 10%;
     top: 40%;
-    background: green;
 }
 #c5of5{
     left: 10%;
     top: 70%;
-    background: purple;
 }
-
 /* Even Clues */
 #c2of5{
     right: 10%;
     top: 25%;
-    background: orange;
 }
 #c4of5{
     right: 10%;
     top: 55%;
-    background: blue;
 }
+
+
 /* Solution Positions */
 .solution{
-    bottom: 2%;
+    bottom: 4%;
     border-radius: 0;
     overflow: visible;
 }
@@ -233,17 +222,4 @@ body{
 }
 #s3{
     left: 5%;
-}
-/* Card Area */
-#gameArea{
-    width: 80%;
-    height: 100%;
-    float: right;
-}
-/* Cards */
-.back{
-    width: 12%;
-}
-.back>img{
-    width: 100%;
 }
