--- a/style/cards.css
+++ b/style/cards.css
@@ -2,6 +2,7 @@
 #gameArea{
     width: 80%;
     height: 100%;
+    padding-top: 1%;
     float: right;
     text-align: center;
 }
@@ -51,6 +52,7 @@
 }
 /* 7 Matches (14 card game) */
 #gameArea.seven{
+    padding: 0 10%;
     padding-top: 1%;
 }
 .card.seven{
@@ -66,20 +68,30 @@
 }
 
 /* 9 Matches (18 card game) */
-#gameArea.nine{
-    padding-top: 1%;
-}
 .card.nine{
     width: 13%;
     height: 28%;
     margin: 1%;
 }
+
 /* 11 Matches (22 card game) */
-.card.eleven{
-    width: 9%;
-    height: 30%;
-    margin: 2% 1%;
+.card.eleven:nth-child(n+8){
+    width: 10%;
+    margin: 1%;
 }
+.card.eleven, .card.eleven:nth-child(n+16){
+    width: 12%;
+    height: 24%;
+    margin: 2.5% 0;
+}
+
+.card.eleven:nth-child(1), .card.eleven:nth-child(16){
+    margin-left: 3%;
+}
+.card.eleven:nth-child(7), .card.eleven:nth-child(22){
+    margin-right: 3%;
+}
+
 
 
 /* Card Animations */
